--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
     "react-visibility-sensor": "^5.0.2",
+    "smoothscroll-polyfill": "^0.4.3",
     "styled-components": "^4.1.2"
   },
   "scripts": {
