--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "pigeon-maps": "^0.11.8",
     "pigeon-marker": "^0.3.4",
     "react": "^16.6.3",
